enable tests for Java 17+